--- a/Experiment 1 -> SVM Regressor.ipynb
+++ b/Experiment 1 -> SVM Regressor.ipynb
@@ -73,7 +73,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8941935154126756\n"
+      "0.8738892508621618\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.7635093210398933\n"
+      "0.8338675869930593\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.825890024264614\n"
+      "0.8398947187467516\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.802877417299758\n"
+      "0.77757214587247\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8260481219943225\n"
+      "0.8144306570999451\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9178831824059016\n"
+      "0.8893007521432729\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0415408510958451"
+       "0.052587484626045115"
       ]
      },
      "execution_count": 10,
@@ -229,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "0.042407305026955104"
+       "0.05325097872450731"
       ]
      },
      "execution_count": 11,
@@ -249,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04499368395731612"
+       "0.056580148662176026"
       ]
      },
      "execution_count": 12,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04702074310398529"
+       "0.058115784852827236"
       ]
      },
      "execution_count": 13,
@@ -283,39 +283,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4179.56635408,  7178.77002491,  7792.15088447,  4401.92348052,\n",
-       "         2771.56491565, -3838.48490729,  1990.        ]])"
+       "array([[ 85080.10516203, 155027.84681808,  13559.25869982,\n",
+       "          6663.52508105,   4634.37543487,  45803.9870814 ,\n",
+       "          1990.        ]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "i = 20\n",
+    "i = 120\n",
     "scalerY.inverse_transform([[clf1.predict([X_test.iloc[i]])[0], clf2.predict([X_test.iloc[i]])[0], clf3.predict([X_test.iloc[i]])[0], \n",
     "                          clf4.predict([X_test.iloc[i]])[0], clf5.predict([X_test.iloc[i]])[0], clf6.predict([X_test.iloc[i]])[0], 0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4450., 3275., 4394., 1198.,  811.,   56., 2014.]])"
+       "array([[ 57900., 136649.,   3206.,    821.,   2385.,  49816.,   2014.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
