--- a/Experiment 3 -> Gaussian Process Regressor.ipynb
+++ b/Experiment 3 -> Gaussian Process Regressor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.gaussian_process import GaussianProcessRegressor\n",
-    "from sklearn.gaussian_process.kernels import DotProduct, WhiteKernel\n",
+    "from sklearn.gaussian_process.kernels import DotProduct, WhiteKernel, RBF, RationalQuadratic\n",
     "import time"
    ]
   },
@@ -67,20 +67,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 s\n",
-      "0.9057464381877138\n"
+      "17 s\n",
+      "0.9727727218792291\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/oscar/TFGInf/.venv/lib/python3.6/site-packages/sklearn/gaussian_process/_gpr.py:494: ConvergenceWarning: lbfgs failed to converge (status=2):\n",
+      "ABNORMAL_TERMINATION_IN_LNSRCH.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "  _check_optimize_result(\"lbfgs\", opt_res)\n"
      ]
     }
    ],
    "source": [
-    "kernel = DotProduct() + WhiteKernel()\n",
+    "kernel = RationalQuadratic() + RBF()\n",
     "clf1 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf1.fit(X_train, np.ravel(Y1_train))\n",
@@ -91,20 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 s\n",
-      "0.5042074316943358\n"
+      "14 s\n",
+      "0.9690654391204357\n"
      ]
     }
    ],
    "source": [
-    "kernel = DotProduct() + WhiteKernel()\n",
+    "kernel = RationalQuadratic() + RBF()\n",
     "clf2 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf2.fit(X_train, np.ravel(Y2_train))\n",
@@ -115,20 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 s\n",
-      "0.8563963759026687\n"
+      "10 s\n",
+      "0.9510212578191132\n"
      ]
     }
    ],
    "source": [
-    "kernel = DotProduct() + WhiteKernel()\n",
+    "kernel = RationalQuadratic() + RBF()\n",
     "clf3 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf3.fit(X_train, np.ravel(Y3_train))\n",
@@ -139,11 +151,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 s\n",
+      "0.910443203765313\n"
+     ]
+    }
+   ],
    "source": [
-    "kernel = DotProduct() + WhiteKernel()\n",
+    "kernel = RationalQuadratic() + RBF()\n",
     "clf4 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf4.fit(X_train, np.ravel(Y4_train))\n",
@@ -154,11 +175,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22 s\n",
+      "0.9590022331583163\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/oscar/TFGInf/.venv/lib/python3.6/site-packages/sklearn/gaussian_process/_gpr.py:494: ConvergenceWarning: lbfgs failed to converge (status=2):\n",
+      "ABNORMAL_TERMINATION_IN_LNSRCH.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "  _check_optimize_result(\"lbfgs\", opt_res)\n"
+     ]
+    }
+   ],
    "source": [
-    "kernel = DotProduct() + WhiteKernel()\n",
+    "kernel = RationalQuadratic() + RBF()\n",
     "clf5 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf5.fit(X_train, np.ravel(Y5_train))\n",
@@ -169,11 +211,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21 s\n",
+      "0.8135148857613028\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/oscar/TFGInf/.venv/lib/python3.6/site-packages/sklearn/gaussian_process/_gpr.py:494: ConvergenceWarning: lbfgs failed to converge (status=2):\n",
+      "ABNORMAL_TERMINATION_IN_LNSRCH.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "  _check_optimize_result(\"lbfgs\", opt_res)\n"
+     ]
+    }
+   ],
    "source": [
-    "kernel = DotProduct() + WhiteKernel()\n",
+    "kernel = RationalQuadratic()\n",
     "clf6 = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf6.fit(X_train, np.ravel(Y6_train))\n",
@@ -184,45 +247,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.015665769376767943"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.abs(clf1.predict(X_test.iloc[0::4]) - np.array(Y1_test.iloc[0::4][0])).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.019112317640537047"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.abs(clf1.predict(X_test.iloc[1::4]) - np.array(Y1_test.iloc[1::4][0])).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.022527645828957134"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.abs(clf1.predict(X_test.iloc[2::4]) - np.array(Y1_test.iloc[2::4][0])).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.026480597626386895"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.abs(clf1.predict(X_test.iloc[3::4]) - np.array(Y1_test.iloc[3::4][0])).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 66890.62421035, 136127.94685652,   4888.68412808,\n",
+       "           856.76162324,   2743.39462902,  39084.40856564,\n",
+       "          1990.        ]])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "i = 120\n",
     "scalerY.inverse_transform([[clf1.predict([X_test.iloc[i]])[0], clf2.predict([X_test.iloc[i]])[0], clf3.predict([X_test.iloc[i]])[0], \n",
@@ -231,12 +351,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 57900., 136649.,   3206.,    821.,   2385.,  49816.,   2014.]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scalerY.inverse_transform([Y_test.iloc[i]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
