--- a/Experiment 4 -> SVM Regressor temporal.ipynb
+++ b/Experiment 4 -> SVM Regressor temporal.ipynb
@@ -31,7 +31,8 @@
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
     "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
     "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
-    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Disposal',\n",
+    "       'Last Year Built', 'Difference Built',\n",
     "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
     "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
     "       'Difference Tourism']]\n",
@@ -41,7 +42,8 @@
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
     "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
     "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
-    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Disposal',\n",
+    "       'Last Year Built', 'Difference Built',\n",
     "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
     "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
     "       'Difference Tourism']]"
@@ -91,7 +93,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8889192272821811\n"
+      "0.8773274863715659\n"
      ]
     }
    ],
@@ -114,7 +116,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9381254884104485\n"
+      "0.955815556178149\n"
      ]
     }
    ],
@@ -137,7 +139,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9057265298051079\n"
+      "0.9288636534479461\n"
      ]
     }
    ],
@@ -160,7 +162,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8408130045722708\n"
+      "0.8254843523708538\n"
      ]
     }
    ],
@@ -183,7 +185,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8427215334957956\n"
+      "0.8738885527441347\n"
      ]
     }
    ],
@@ -206,7 +208,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8547824916921111\n"
+      "0.8596315342034183\n"
      ]
     }
    ],
@@ -227,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0513393562489691"
+       "0.05233686733324846"
       ]
      },
      "execution_count": 11,
@@ -247,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "0.05927896611309717"
+       "0.06195559844648354"
       ]
      },
      "execution_count": 12,
@@ -267,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "0.05930413634809146"
+       "0.06169642017858456"
       ]
      },
      "execution_count": 13,
@@ -287,7 +289,7 @@
     {
      "data": {
       "text/plain": [
-       "0.059531520421219467"
+       "0.06233076590105822"
       ]
      },
      "execution_count": 14,
@@ -301,18 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 48196.90073587, 139435.55765183,   5168.35755162,\n",
-       "          2617.55651824,   3826.05931958,  37270.26775595,\n",
+       "array([[ 51326.23567063, 142922.86232393,   5824.53281965,\n",
+       "          3435.68168121,   3317.95523919,  35792.15849916,\n",
        "          1992.        ]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +336,7 @@
        "array([[ 57900., 136649.,   3206.,    821.,   2385.,  49816.,   2014.]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
