--- a/Experiment 5 -> Gradient Boosting Regressor temporal.ipynb
+++ b/Experiment 5 -> Gradient Boosting Regressor temporal.ipynb
@@ -31,7 +31,8 @@
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
     "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
     "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
-    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Disposal',\n",
+    "       'Last Year Built', 'Difference Built',\n",
     "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
     "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
     "       'Difference Tourism']]\n",
@@ -41,7 +42,8 @@
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
     "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
     "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
-    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Disposal',\n",
+    "       'Last Year Built', 'Difference Built',\n",
     "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
     "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
     "       'Difference Tourism']]"
@@ -83,7 +85,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.979188165869881\n"
+      "0.9836905086698149\n"
      ]
     }
    ],
@@ -106,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9936148466888065\n"
+      "0.9974134162434423\n"
      ]
     }
    ],
@@ -129,7 +131,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9427478245883824\n"
+      "0.934696583286423\n"
      ]
     }
    ],
@@ -152,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9294579160116708\n"
+      "0.929540323946709\n"
      ]
     }
    ],
@@ -175,7 +177,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9403447383140947\n"
+      "0.9271638156911292\n"
      ]
     }
    ],
@@ -198,7 +200,7 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.983518147373874\n"
+      "0.9648696733646137\n"
      ]
     }
    ],
@@ -219,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "0.01308605740417267"
+       "0.011389074362865612"
       ]
      },
      "execution_count": 10,
@@ -239,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "0.005551595571008284"
+       "0.004863039843680319"
       ]
      },
      "execution_count": 11,
@@ -259,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0072245804140108425"
+       "0.006008325283381445"
       ]
      },
      "execution_count": 12,
@@ -279,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0071541193235313775"
+       "0.005397174360882472"
       ]
      },
      "execution_count": 13,
@@ -299,8 +301,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 41493.66873371, 136745.13916429,   3353.79125409,\n",
-       "           853.63561295,   2513.89754899,  30133.41978017,\n",
+       "array([[ 39081.03946063, 136687.31241885,   3367.91300328,\n",
+       "           863.30796871,   2443.31179438,  25511.28261305,\n",
        "          1992.        ]])"
       ]
      },
