--- a/Experiment 6 -> Gaussian Process Regressor temporal.ipynb
+++ b/Experiment 6 -> Gaussian Process Regressor temporal.ipynb
@@ -33,7 +33,8 @@
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
     "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
     "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
-    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Disposal',\n",
+    "       'Last Year Built', 'Difference Built',\n",
     "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
     "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
     "       'Difference Tourism']]\n",
@@ -43,7 +44,8 @@
     "       'Under 20 Percentage', 'Income Per Capita', 'Tourism', 'Area',\n",
     "       'Built Area', 'Last Year Municipal', 'Last Year Household',\n",
     "       'Last Year Recovered', 'Last Year Recicled', 'Last Year Compost',\n",
-    "       'Last Year Built', 'Difference Built', 'Mean Built',\n",
+    "       'Last Year Disposal',\n",
+    "       'Last Year Built', 'Difference Built',\n",
     "       'Last Year Below Secundary', 'Difference Below Secundary',\n",
     "       'Last Year Population', 'Difference Population', 'Last Year Tourism',\n",
     "       'Difference Tourism']]"
@@ -84,8 +86,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 s\n",
-      "0.9982873931975189\n"
+      "6 s\n",
+      "0.9981970273927449\n"
      ]
     }
    ],
@@ -108,8 +110,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 s\n",
-      "0.9979996590804101\n"
+      "5 s\n",
+      "0.998182993763609\n"
      ]
     }
    ],
@@ -132,8 +134,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 s\n",
-      "0.9962160378682711\n"
+      "3 s\n",
+      "0.9956356059018744\n"
      ]
     }
    ],
@@ -157,7 +159,7 @@
      "output_type": "stream",
      "text": [
       "4 s\n",
-      "0.995583883501003\n"
+      "0.99481271327772\n"
      ]
     }
    ],
@@ -181,7 +183,7 @@
      "output_type": "stream",
      "text": [
       "4 s\n",
-      "0.9926272322620833\n"
+      "0.9927199154818718\n"
      ]
     }
    ],
@@ -205,7 +207,7 @@
      "output_type": "stream",
      "text": [
       "4 s\n",
-      "0.8925650089634574\n"
+      "0.9959258675140706\n"
      ]
     }
    ],
@@ -227,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "0.00488430677153065"
+       "0.004543423817946047"
       ]
      },
      "execution_count": 10,
@@ -247,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0045649739739826965"
+       "0.004843366560755103"
       ]
      },
      "execution_count": 11,
@@ -267,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "0.005437748126557864"
+       "0.005625817959333165"
       ]
      },
      "execution_count": 12,
@@ -287,7 +289,7 @@
     {
      "data": {
       "text/plain": [
-       "0.005202709776921506"
+       "0.005584538135697203"
       ]
      },
      "execution_count": 13,
@@ -307,8 +309,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 58959.17030451, 136788.25475045,   2602.65008371,\n",
-       "           519.09281579,   2367.41947456,  37634.67387748,\n",
+       "array([[ 58122.04818852, 137169.72678044,   2777.41240503,\n",
+       "           664.89771979,   2340.52864996,  49104.15177735,\n",
        "          1992.        ]])"
       ]
      },
