--- a/data.ipynb
+++ b/data.ipynb
@@ -6331,7 +6331,7 @@
     }
    ],
    "source": [
-    "dfMUNW.loc[dfMUNW['Country'] == \"Spain\"]"
+    "RationalQuadraticdfMUNW.loc[dfMUNW['Country'] == \"Spain\"]"
    ]
   },
   {
@@ -11835,6 +11835,223 @@
    ],
    "source": [
     "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet(\"dataset.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>COU</th>\n",
+       "      <th>Built</th>\n",
+       "      <th>Below Secundary</th>\n",
+       "      <th>Income Median</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Over 65</th>\n",
+       "      <th>Over 65 Percentage</th>\n",
+       "      <th>Over 85</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Income Per Capita</th>\n",
+       "      <th>Tourism</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Built Area</th>\n",
+       "      <th>Municipal</th>\n",
+       "      <th>Household</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Recicled</th>\n",
+       "      <th>Compost</th>\n",
+       "      <th>Disposal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>758</th>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>TUR</td>\n",
+       "      <td>0.61617</td>\n",
+       "      <td>86.381432</td>\n",
+       "      <td>40578.373134</td>\n",
+       "      <td>8451834.0</td>\n",
+       "      <td>1536705.0</td>\n",
+       "      <td>0.181819</td>\n",
+       "      <td>214359.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1593.943627</td>\n",
+       "      <td>6.872</td>\n",
+       "      <td>785350.0</td>\n",
+       "      <td>483909.1095</td>\n",
+       "      <td>22315.0</td>\n",
+       "      <td>3356.0</td>\n",
+       "      <td>5992.0</td>\n",
+       "      <td>1846.0</td>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Country  Year  COU    Built  Below Secundary  Income Median  Population  \\\n",
+       "758  Turkey  1992  TUR  0.61617        86.381432   40578.373134   8451834.0   \n",
+       "\n",
+       "       Over 65  Over 65 Percentage   Over 85  ...  Income Per Capita  Tourism  \\\n",
+       "758  1536705.0            0.181819  214359.0  ...        1593.943627    6.872   \n",
+       "\n",
+       "         Area   Built Area  Municipal  Household  Recovered  Recicled  \\\n",
+       "758  785350.0  483909.1095    22315.0     3356.0     5992.0    1846.0   \n",
+       "\n",
+       "     Compost  Disposal  \n",
+       "758   1300.0       0.0  \n",
+       "\n",
+       "[1 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[df[[\"Below Secundary\"]].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>COU</th>\n",
+       "      <th>Built</th>\n",
+       "      <th>Below Secundary</th>\n",
+       "      <th>Income Median</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Over 65</th>\n",
+       "      <th>Over 65 Percentage</th>\n",
+       "      <th>Over 85</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Income Per Capita</th>\n",
+       "      <th>Tourism</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Built Area</th>\n",
+       "      <th>Municipal</th>\n",
+       "      <th>Household</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Recicled</th>\n",
+       "      <th>Compost</th>\n",
+       "      <th>Disposal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1035</th>\n",
+       "      <td>Russia</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>RUS</td>\n",
+       "      <td>0.14726</td>\n",
+       "      <td>4.757205</td>\n",
+       "      <td>5101.620911</td>\n",
+       "      <td>144496738.0</td>\n",
+       "      <td>20608462.0</td>\n",
+       "      <td>0.142622</td>\n",
+       "      <td>2104243.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>398.016177</td>\n",
+       "      <td>4.11</td>\n",
+       "      <td>17098250.0</td>\n",
+       "      <td>2517888.295</td>\n",
+       "      <td>80564.33</td>\n",
+       "      <td>282.33</td>\n",
+       "      <td>6716.88</td>\n",
+       "      <td>393.589</td>\n",
+       "      <td>790.753</td>\n",
+       "      <td>4217.051</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Country  Year  COU    Built  Below Secundary  Income Median   Population  \\\n",
+       "1035  Russia  2017  RUS  0.14726         4.757205    5101.620911  144496738.0   \n",
+       "\n",
+       "         Over 65  Over 65 Percentage    Over 85  ...  Income Per Capita  \\\n",
+       "1035  20608462.0            0.142622  2104243.0  ...         398.016177   \n",
+       "\n",
+       "      Tourism        Area   Built Area  Municipal  Household  Recovered  \\\n",
+       "1035     4.11  17098250.0  2517888.295   80564.33     282.33    6716.88   \n",
+       "\n",
+       "      Recicled  Compost  Disposal  \n",
+       "1035   393.589  790.753  4217.051  \n",
+       "\n",
+       "[1 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[df[[\"Below Secundary\"]].idxmin()]"
    ]
   },
   {
